fixed(ckeditor): image upload progress and icon are beter visible

--- a/mod/ckeditor/views/default/ckeditor/editor.css
+++ b/mod/ckeditor/views/default/ckeditor/editor.css
@@ -4746,46 +4746,3 @@ label.ck.ck-color-grid__label {
 .ck-editor__editable .todo-list .todo-list__label>input:hover:before {
 	box-shadow: 0 0 0 5px rgba(0, 0, 0, .1)
 }
-
-
-/* Elgg specific */
-.ck-editor .ck-content {
-	dt {
-		font-weight: bold;
-	}
-
-	dd {
-		margin: 0 0 1rem 1rem;
-	}
-	
-	ul,
-	ol {
-		margin: 0 1.5rem 1.5rem 0.5rem;
-		padding-left: 1rem;
-	}
-	
-	ul,
-	ul ul,
-	ul ul ul {
-		list-style-type: disc;
-	}
-	
-	ol,
-	ol ol,
-	ol ol ol {
-		list-style-type: decimal;
-	}
-	
-	img {
-		max-width: 100%;
-		height: auto;
-	}
-}
-
-.ck-editor > .ck-editor__main > .ck-editor__editable {
-	min-height: 250px;
-}
-
-.elgg-ckeditor-simple > .ck-editor__main > .ck-editor__editable {
-	min-height: 150px;
-}
